# automata-backend

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  Dockerfile  Procfile  README.md  coverage.xml  docker-compose.yml  main.py  noxfile.py  pyproject.toml  requirements.txt
.circleci/: config.yml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  postcreate.sh
apps/notebooks/: architecture_patterns.ipynb  python-problem-solving-template.ipynb  trading.ipynb
apps/notebooks/architecture_patterns/domain/: model.py  test_model.py
apps/notes/: docker-compose.override.yml.example
apps/raspberry/: main.py  pyproject.toml
apps/raspberry/backend/: docker-compose.yml  pyproject.toml
apps/raspberry/backend/src/: logger.py  scheluder.py
apps/raspberry/src/: config.py
docs/: conf.py  index.rst  reference.rst
docs/_build/: .buildinfo  genindex.html  index.html  license.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree  license.doctree  reference.doctree
migrations/: env.py
migrations/versions/: 4009590c388c_reminders_table.py
notes/: Dockerfile
scripts/: README.md  prestart-mac.sh
src/: __init__.py
src/app/: __init__.py  config.py  console.py  db.py  utils.py  wikipedia.py
src/notebooks/architecture_patterns/domain/: test_allocate.py  test_batches.py
src/trading/: __init__.py  get.py  pipeline.py  plot.py
tests/: conftest.py  test_config.py  test_console.py  test_db.py  test_utils.py  test_wikipedia.py
tests/data/: test.txt
tests/trading/: __init__.py  test_plot.py
website/: __init__.py  main.py
