[tool.poetry]
name = "app"
version = "0.1.0"
description = "Utilities using best practices with notes and examples"
authors = ["Felipe Restrepo <maferelo@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-crontab = "^2.6.0"
python-telegram-bot = "^13.12"
fastapi = "^0.78.0"
uvicorn = "^0.18.1"
ormar = "^0.11.2"
psycopg2-binary = "^2.9.3"
asyncpg = "^0.25.0"
alembic = "^1.8.1"
python-decouple = "^3.6"
numpy = "1.18.5"
scikit-learn = "0.24.2"
ipykernel = "^6.15.3"
pandas = "1.3"
typer = "^0.6.1"
click = "^8.1.3"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.3"
mypy = "^0.982"
types-requests = "^2.28.11.2"
pytest = "^7.1.3"
black = "^22.10.0"
pre-commit = "^2.20.0"

[tool.poetry.scripts]
app = "src.app.console:main"

[tool.mypy]
exclude = ["notes", "migrations"]
ignore_missing_imports = "True"

[tool.pylint]
max-line-length = 120
disable = ["C0114"]
ignore = ["notes", "migrations"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
