[tool.poetry]
name = "app"
version = "0.1.0"
description = "Utilities using best practices with notes and examples"
documentation = ""
authors = ["Felipe Restrepo <maferelo@users.noreply.github.com>"]

[tool.poetry.dependencies]
aiofiles = "22.1.0"
alembic = "1.9.0"
asyncpg = "0.25.0"
click = "8.1.3"
desert = "2022.9.22"
fastapi = "0.78.0"
gunicorn = "20.1.0"
ipykernel = "6.19.4"
jinja2 = "3.1.2"
markdown = "3.4.1"
marshmallow = "3.19.0"
numpy = "1.22.2"
ormar = "0.12.0"
pandas = "1.3"
psycopg2-binary = "2.9.5"
py = "1.11.0"
python = "3.8.16"
python-crontab = "2.7.0"
python-decouple = "3.6"
python-dotenv = "0.21.0"
python-multipart = "0.0.5"
python-telegram-bot = "13.15"
requests = "2.28.1"
scikit-learn = "0.24.2"
sqlalchemy = "1.4.41"
typer = "0.6.1"
uvicorn = "0.18.3"
tensorflow = {url = "https://storage.googleapis.com/tensorflow/linux/gpu/tensorflow-2.12.0-cp38-cp38-manylinux_2_17_x86_64.manylinux2014_x86_64.whl"}

[tool.poetry.group.dev.dependencies]
bandit = "1.7.4"
black = "22.12.0"
blacken-docs = "1.12.1"
coverage = {extras = ["toml"], version = "6.5.0"}
darglint = "1.8.1"
flake8 = "5.0.4"
flake8-bandit = "4.1.1"
flake8-black = "0.3.6"
flake8-bugbear = "22.12.6"
flake8-docstrings = "1.6.0"
gitlint-core = "0.17.0"
isort = "5.11.3"
mypy = "0.982"
nox = "2022.11.21"
pre-commit = "2.20.0"
pygments = "2.13.0"
pylint = "2.15.9"
pytest = "7.2.0"
pytest-cov = "4.0.0"
pytest-mock = "3.10.0"
pytest-xdist = "3.1.0"
pyupgrade = "3.3.1"
safety = "2.3.5"
shellcheck-py = "0.8.0.4"
sphinx = "5.3.0"
sphinx-autodoc-typehints = "1.19.5"
typeguard = "2.13.3"
types-requests = "2.28.11.5"
xdoctest = "1.1.0"
yamllint = "1.28.0"

[tool.poetry.scripts]
wiki = "app.console:main"


[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.isort]
force_single_line = true
profile = "black"

[tool.mypy]
exclude = [".env", ".venv", "apps", "notes", "migrations"]
ignore_missing_imports = "True"

[tool.pytest.ini_options]
testpaths = ["src", "tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
