[tool.poetry]
name = "automata"
version = "0.1.0"
description = "rpi apps"
authors = ["Felipe Restrepo chocolitox@gmail.com"]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.6.1"
python-telegram-bot = "^13.14"
python-crontab = "^2.6.0"
python-decouple = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
